name:                demiurge
version:             0.0.1.0
description:         worker simulation
license:             MIT
license-file:        LICENSE
author:              olive
maintainer:          olivine.dogue@gmail.com
category:            AI
build-type:          Simple
cabal-version:       >=1.10

executable demiurge
  main-is:             Main.hs
  hs-source-dirs:      src
  default-extensions:  GADTs
                     , TypeSynonymInstances
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , FunctionalDependencies
                     , NoMonomorphismRestriction
                     , PatternSynonyms
                     , RankNTypes
                     , ScopedTypeVariables
                     , FlexibleContexts
                     , TupleSections
                     , DataKinds
                     , KindSignatures
                     , NullaryTypeClasses
                       TypeOperators



  build-depends:       base >=4.7 && <4.8
                     , containers
                     , vector
                     , mtl
                     , async
                     , MonadRandom
                     , antiqua-prime
  default-language:    Haskell2010
